About Us Complete

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3191,7 +3191,7 @@ ul.social-links .social-icon.pinterest span:nth-child(2) i {
 }
 
 #page-helf-photo .left-helf-of-page{
-    background: url(../img/demo/back.jpg) no-repeat top right;
+    background: url(../images/aboutus.jpg) no-repeat top left;
     min-height: 437px;
     width: 50%;
     float: left;
